--- a/views/client/added.hbs
+++ b/views/client/added.hbs
@@ -1,5 +1,5 @@
 <h2>Klient {{name}} został dodany do bazy</h2>
 <p>
-    <a href="/client/{{id}}">Przejdź do szczegółów tego klienta</a>
+    <a href="/client/{{id}}"><button>Przejdź do szczegółów tego klienta</button></a>
 </p>
 {{> go-to-clients}}
